new words added

--- a/index.html
+++ b/index.html
@@ -80,14 +80,16 @@
         <tr>
           <th>Word</th>
           <th>Meaning</th>
-          <th>Sentence</th>
+          <th style="text-align: center">Sentence</th>
           <th>Date</th>
         </tr>
       </table>
     </section>
 
     <section>
-      <footer class="w3-footer w3-blue">All rights reserved @2021</footer>
+      <footer style="text-align: center" class="w3-footer w3-blue">
+        All rights reserved @2021
+      </footer>
     </section>
   </body>
 </html>
